404.html: Now GitHub Pages

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 		var init = {
 			'urlRoot': "",
-			'csrfNonce': "b692707316a575d97069887fd8a3c11419eb7cff0a9be861f941421bc7fc5e2b",
+			'csrfNonce': "1933659bdee2a35f59f28dd1f22adb3fc1f1cb537f7abc17604059bdd19ac1aa",
 			'userMode': "teams",
 			'userId': 0,
 			'start': 1627689600,
@@ -262,7 +262,7 @@ UIUCTF 2021
 <h1>404</h1>
 <hr class="w-50">
 <h2>File not found</h2>
-<h2>Sorry about that</h2>
+<h2>This site has been archived and is now served statically by GitHub Pages</h2>
 </div>
 </div>
 </div>
@@ -270,8 +270,8 @@ UIUCTF 2021
 </main>
 <footer class="footer">
 <div class="container text-center">
-<a href="https://ctfd.io" class="text-secondary">
-<small class="text-muted">Powered by CTFd</small>
+<a href="https://pages.github.com/" class="text-secondary">
+<small class="text-muted">Powered by <s>CTFd</s> GitHub Pages</small>
 </a>
 </div>
 </footer>
