Add JS hooks to challenge page for flag verify & hints

--- a/challenges.html
+++ b/challenges.html
@@ -273,6 +273,7 @@ UIUCTF 2021
 <script defer src="/themes/core/static/js/core.min.js?d=24c91258"></script>
 <script defer src="/themes/core/static/js/helpers.min.js?d=24c91258"></script>
 <script defer src="/themes/core/static/js/pages/challenges.min.js?d=24c91258"></script>
+<script defer src="/ctfd2pages/hooks/challenges.min.js"></script>
 <script>
 // Set the date we're counting down to
 (function () {
